# mlean2024_clase1

./: Readme.MD  pyproject.toml
Code/: 1. CargayTransformacion.ipynb  2. Preprocesamiento.ipynb  Preprocesamiento.ipynb  PrimeraPrueba.ipynb
Models/: mi_primer_preprocesamiento.joblib
