[tool.poetry]
name = "clase1"
version = "0.0.1"
description = "Clase 1"
authors = ["JSNM"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "1.*"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
